--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "samsung-settings",
   "version": "1.0.0",
   "description": "Settings application for other OneUI-Project applications, build in Electron.",
+  "productName": "Samsung Settings",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
